fix spacing

--- a/style.css
+++ b/style.css
@@ -113,3 +113,21 @@ header {
 		font-size: 30px;
 	}
 }
+.about {
+    background-color: #444053;
+}
+.about h1 {
+    padding-top: 45px;
+    color: white;
+    text-align: center;
+    font-size: 64px;
+}
+
+.about p {
+    color: white;
+    text-align: center;
+    padding-top: 23px;
+    padding-left: 100px;
+    padding-right: 100px;
+    font-size: 24px;
+}
